adiciona secao hero com estilos e ilustracao
- inclui nova secao hero em `index.html` com titulo, descricao e botoes de CTA para encontrar e oferecer servicos.
- vincula novo arquivo de estilo `css/styles.css` com variaveis de cor, configuracoes de fonte, espacamento e layout para a secao hero.
- adiciona `undraw_business_deal_re_up4u.svg` aos assets como ilustracao visual para a secao hero.
- atualiza titulo do site para "Resolve" e adiciona favicon.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>resolve</title>
+    <link rel="icon" type="image/x-icon" href="assets/proprietary/resolve_logomark.ico">
+    <title>Resolve</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>resolve</h1>
+    <main>
+        <section class="hero-section">
+            <div class="hero-section__content">
+                <div class="hero-section__presentation">
+                    <h1 class="hero-section__title">Encontre os melhores profissionais para qualquer trabalho</h1>
+                    <p class="hero-section__description">Descubra prestadores de serviço prontos para atender suas necessidades ou anuncie um trabalho e receba ofertas personalizadas em minutos.</p>
+                    <div class="hero-section__btn">
+                        <a href="#" class="btn btn--blue btn--filled">Encontre o profissional ideal</a>
+                        <a href="#" class="btn btn--orange btn--filled">Ofereça seus serviços</a>
+                    </div>
+                </div>
+                <div class="hero-section__img-container">
+                    <img class="hero-section__img" src="assets/third-party/unDraw/undraw_business_deal_re_up4u.svg" alt="business deal">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
