adiciona header e navbar com estilizacao
- adiciona brand e os links de navegacao da landing page
- melhora a estilizacao do hero-section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <header class="header">
+        <nav class="header__nav">
+            <div class="header__brand">
+                <img class="header__logo" src="assets/proprietary/resolve_logomark.svg" alt="Logomarca da Resolve">
+                <span class="header__name">Resolve</span>
+            </div>
+            <ul class="header__menu">
+                <li class="header__menu-item"><a href="#home" class="header__menu-link">Home</a></li>
+                <li class="header__menu-item"><a href="#" class="header__menu-link">Como funciona</a></li>
+                <li class="header__menu-item"><a href="#" class="header__menu-link">Ofereça seus serviços</a></li>
+                <li class="header__menu-item"><a href="#" class="header__menu-link">Sobre nós</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
-        <section class="hero-section">
+        <section id="home" class="hero-section">
             <div class="hero-section__content">
                 <div class="hero-section__presentation">
                     <h1 class="hero-section__title">Encontre os melhores profissionais para qualquer trabalho</h1>
