adiciona secao how-it-works com estilizacao
- adiciona os icones `badge.svg`, `handshake.svg` e `person_search.svg`
- adiciona a licenca dos icones
- adiciona `undraw_searching_re_3ra9.svg`

--- a/index.html
+++ b/index.html
@@ -38,6 +38,59 @@
                 </div>
             </div>
         </section>
+
+        <div class="section-divider"></div>
+        
+        <section id="como-funciona" class="how-it-works">
+            <div class="how-it-works__container">
+                <h2 class="how-it-works__title">Como funciona</h2>
+                <div class="how-it-works__main">
+                    <div class="how-it-works__img-wrapper">
+                        <img class="how-it-works__img" src="assets/third-party/unDraw/undraw_searching_re_3ra9.svg" alt="Procurando por um profissional">
+                    </div>
+                    <div class="how-it-works__text">
+                        <div class="how-it-works__cards">
+                            <div class="how-it-works__card">
+                                <div class="how-it-works__card-icon-wrapper">
+                                    <img class="how-it-works__card-icon" src="assets/third-party/material-design-icons/person_search.svg" alt="Ícone de busca de profissional">
+                                </div>
+                                <div class="how-it-works__card-content">
+                                    <h3 class="how-it-works__card-title">Pesquise ou crie um pedido de serviço</h3>
+                                    <p class="how-it-works__card-description">
+                                        Escolha entre buscar pelo nome ou tipo de serviço e visualizar os perfis disponíveis, ou publique um pedido descrevendo sua necessidade e receba propostas para avaliar.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="how-it-works__card">
+                                <div class="how-it-works__card-icon-wrapper">
+                                    <img class="how-it-works__card-icon" src="assets/third-party/material-design-icons/badge.svg" alt="Ícone de perfil com selo">
+                                </div>
+                                <div class="how-it-works__card-content">
+                                    <h3 class="how-it-works__card-title">Analise perfis e propostas</h3>
+                                    <p class="how-it-works__card-description">
+                                        Veja o perfil dos profissionais, confira avaliações de outros clientes e entre em contato direto com quem mais te agradar. Se você publicou um pedido, avalie as propostas recebidas e escolha o melhor profissional.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="how-it-works__card">
+                                <div class="how-it-works__card-icon-wrapper">
+                                    <img class="how-it-works__card-icon" src="assets/third-party/material-design-icons/handshake.svg" alt="Ícone de aperto de mão">
+                                </div>
+                                <div class="how-it-works__card-content">
+                                    <h3 class="how-it-works__card-title">Negocie e contrate diretamente com o profissional</h3>
+                                    <p class="how-it-works__card-description">
+                                        Nossa plataforma não interfere na negociação ou execução do serviço. Você tem liberdade para negociar diretamente e fechar o acordo da forma que preferir.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="how-it-works__cta-bnt">
+                            <a href="" class="btn btn--blue btn--outlined">Encontre o profissional ideal</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
