adiciona secao offer-services
- adiciona os icones `group.svg`, `send.svg` e `star.svg`

--- a/index.html
+++ b/index.html
@@ -91,6 +91,57 @@
                 </div>
             </div>
         </section>
+
+        <div class="section-divider"></div>
+
+        <section class="offer-services">
+            <div class="offer-services__container">
+                <h2 class="offer-services__title">Ofereça seus serviços</h2>
+                <p class="offer-services__description">Cadastre-se e ofereça seus serviços para pessoas que estão precisando exatamente do que você faz.</p>
+                <div class="offer-services__card-container">
+                    <div class="card">
+                        <div class="card__icon-wrapper">
+                            <img class="card__icon" src="assets/third-party/material-design-icons/groups.svg" alt="Ícone de pessoas conectadas">
+                        </div>
+                        <div class="card__content">
+                            <h3 class="card__title">Conecte-se com clientes</h3>
+                            <p class="card__description">Encontre clientes próximos ou de outras regiões para ampliar suas oportunidades.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card__icon-wrapper">
+                            <img class="card__icon" src="assets/third-party/material-design-icons/send.svg" alt="Ícone de envio de proposta">
+                        </div>
+                        <div class="card__content">
+                            <h3 class="card__title">Envie propostas com facilidade</h3>
+                            <p class="card__description">Responda pedidos rapidamente e aumente suas chances de fechar mais trabalhos.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card__icon-wrapper">
+                            <img class="card__icon" src="assets/third-party/material-design-icons/handshake.svg" alt="Ícone de aperto de mãos representando negociação">
+                        </div>
+                        <div class="card__content">
+                            <h3 class="card__title">Negocie direto, sem taxas</h3>
+                            <p class="card__description">Sem intermediários: combine prazos e valores diretamente com o cliente.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card__icon-wrapper">
+                            <img class="card__icon" src="assets/third-party/material-design-icons/star.svg" alt="Ícone de estrela simbolizando reputação e avaliações">
+                        </div>
+                        <div class="card__content">
+                            <h3 class="card__title">Construa sua reputação</h3>
+                            <p class="card__description">Avaliações positivas ajudam você a atrair ainda mais clientes.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="offer-services__cta">
+                    <p class="offer-services__cta-title">Pronto para começar?</p>
+                    <a href="#" class="btn btn--orange btn--outlined">Ofereça seus serviços</a>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
