adiciona footer com mensagem de copyright e estilizacao

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section id="home" class="hero-section">
             <div class="container-max-width hero-section__container">
@@ -152,6 +153,10 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <p class="footer__copyright">© 2024 Resolve. Todos os direitos reservados.</p>
+    </footer>
 </body>
 
 </html>
