--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </div>
             <ul class="header__menu">
                 <li class="header__menu-item"><a href="#home" class="header__menu-link">Home</a></li>
-                <li class="header__menu-item"><a href="#" class="header__menu-link">Como funciona</a></li>
-                <li class="header__menu-item"><a href="#" class="header__menu-link">Ofereça seus serviços</a></li>
-                <li class="header__menu-item"><a href="#" class="header__menu-link">Sobre nós</a></li>
+                <li class="header__menu-item"><a href="#como-funciona" class="header__menu-link">Como funciona</a></li>
+                <li class="header__menu-item"><a href="#ofereca-seus-servicos" class="header__menu-link">Ofereça seus serviços</a></li>
+                <li class="header__menu-item"><a href="#" class="header__menu-link header__menu-link--disabled">Sobre nós</a></li>
             </ul>
         </nav>
     </header>
