atualiza design da secao hero e adiciona responsividade
- altera svg da secao hero para ajustar dimensoes
- adiciona responsividade nas variaveis `--padding-horizontal` e `--display-large-font-size`, onde os valores sao atualizados em telas menores
- adiciona media query e ajusta elementos na secao hero
- remove variaveis de estilo nao utilizadas
- atualiza texto da secao hero
- melhora descricao alt da imagem da secao hero

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="hero-section__main">
                     <div class="hero-section__main-text">
                         <h1 class="hero-section__title">Encontre os melhores profissionais para qualquer trabalho</h1>
-                        <p class="body-text">Descubra prestadores de serviço prontos para atender suas necessidades ou anuncie um trabalho e receba ofertas personalizadas em minutos.</p>
+                        <p class="body-text">Descubra prestadores de serviço prontos para atender suas necessidades ou anuncie um trabalho e receba ofertas personalizadas.</p>
                     </div>
                     <div class="hero-section__btn-container">
                         <a href="#" class="btn btn--blue btn--filled">Encontre o profissional ideal</a>
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="hero-section__img-container">
-                    <img class="hero-section__img" src="assets/third-party/unDraw/undraw_business_deal_re_up4u.svg" alt="business deal">
+                    <img class="hero-section__img" src="assets/third-party/unDraw/undraw_business_deal_re_up4u.svg" alt="Duas pessoas fazendo um acordo de negócios">
                 </div>
             </div>
         </section>
