atualiza design da secao offer-services e adiciona responsividade
- altera a ordem dos cards da secao offer-services
- ajusta as dimensoes do svg da secao offer-services
- centraliza os headline com text-align, para quando ocorrer quebra de linha
- ajusta tamanho do title do cta-container da secao offer-services, de acordo com o tamanho de tela
- atualiza descricao da secao offer-services
- atualiza o title do card "Negocie direto"

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <section id="ofereca-seus-servicos" class="offer-services">
             <div class="container-max-width offer-services__container">
                 <h2 class="headline">Ofereça seus serviços</h2>
-                <p class="body-text">Cadastre-se e ofereça seus serviços para pessoas que estão precisando exatamente do que você faz.</p>
+                <p class="body-text">Cadastre-se e ofereça seus serviços para pessoas que estão precisando do que você faz.</p>
                 <div class="offer-services__card-container">
                     <div class="card">
                         <div class="card__header">
@@ -108,20 +108,20 @@
                     <div class="card">
                         <div class="card__header">
                             <div class="card__icon-wrapper">
+                                <img class="card__icon" src="assets/third-party/material-design-icons/handshake_FF7700.svg" alt="Ícone de aperto de mãos representando negociação">
+                            </div>
+                            <h3 class="card__title">Negocie direto</h3>
+                        </div>
+                        <p class="card__description">Sem intermediários: combine prazos e valores diretamente com o cliente.</p>
+                    </div>
+                    <div class="card">
+                        <div class="card__header">
+                            <div class="card__icon-wrapper">
                                 <img class="card__icon" src="assets/third-party/material-design-icons/send.svg" alt="Ícone de envio de proposta">
                             </div>
                             <h3 class="card__title">Envie propostas com facilidade</h3>
                         </div>
                         <p class="card__description">Responda pedidos rapidamente e aumente suas chances de fechar mais trabalhos.</p>
-                    </div>
-                    <div class="card">
-                        <div class="card__header">
-                            <div class="card__icon-wrapper">
-                                <img class="card__icon" src="assets/third-party/material-design-icons/handshake_FF7700.svg" alt="Ícone de aperto de mãos representando negociação">
-                            </div>
-                            <h3 class="card__title">Negocie direto, sem taxas</h3>
-                        </div>
-                        <p class="card__description">Sem intermediários: combine prazos e valores diretamente com o cliente.</p>
                     </div>
                     <div class="card">
                         <div class="card__header">
@@ -133,14 +133,12 @@
                         <p class="card__description">Avaliações positivas ajudam você a atrair ainda mais clientes.</p>
                     </div>
                 </div>
-                <div class="offer-services__layout">
-                        <div class="offer-services__img-container">
-                            <img class="offer-services__img" src="assets/third-party/unDraw/undraw_businessman_re_mlee.svg" alt="Prestador de serviço">
-                        </div>
-                    <div class="offer-services__cta-container">
-                        <p class="offer-services__cta-title">Pronto para começar?</p>
-                        <a href="#" class="btn btn--orange btn--outlined">Ofereça seus serviços</a>
-                    </div>
+                <div class="offer-services__cta-container">
+                    <p class="offer-services__cta-title">Pronto para começar?</p>
+                    <a href="#" class="btn btn--orange btn--outlined">Ofereça seus serviços</a>
+                </div>
+                <div class="offer-services__img-container">
+                    <img class="offer-services__img" src="assets/third-party/unDraw/undraw_businessman_re_mlee.svg" alt="Prestador de serviço">
                 </div>
             </div>
         </section>
