--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
     </main>
 
     <footer class="footer">
-        <p class="footer__copyright">© 2024 Resolve. Todos os direitos reservados.</p>
+        <div class="container-max-width footer__container">
+            <p class="footer__copyright">© 2024 Resolve. Todos os direitos reservados.</p>
+        </div>
     </footer>
 </body>
 
