atualiza design do header e adiciona responsividade
- adiciona `menu.svg` como icone do botao de menu
- adiciona o botao de menu no hader, para telas menores que 75rem
- atualiza o css para exibir o menu de forma correta em qualquer tamanho de tela
- adiciona `script.js` com scripts para o controle do menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <img class="header__logo" src="assets/proprietary/resolve_logomark.svg" alt="Logomarca da Resolve">
                 <span class="header__name">Resolve</span>
             </div>
+            <button class="header__menu-toggle" aria-label="Abrir menu" data-menu-toggle>
+                <img class="header__menu-icon" src="assets/third-party/material-design-icons/menu.svg" alt="Ícone de menu">
+            </button>
             <ul class="header__menu">
                 <li class="header__menu-item"><a href="#home" class="header__menu-link">Home</a></li>
                 <li class="header__menu-item"><a href="#como-funciona" class="header__menu-link">Como funciona</a></li>
@@ -149,6 +152,8 @@
             <p class="footer__copyright">© 2024 Resolve. Todos os direitos reservados.</p>
         </div>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
