renames platform from "Resolve" to "helpme" and updates related assets and documentation

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/proprietary/resolve_logomark.ico">
-    <title>Resolve</title>
+    <link rel="icon" type="image/x-icon" href="assets/proprietary/helpme_logomark.ico">
+    <title>helpme</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -13,8 +13,8 @@
     <header class="header">
         <nav class="container-max-width header__nav">
             <div class="header__brand">
-                <img class="header__logo" src="assets/proprietary/resolve_logomark.svg" alt="Logomarca da Resolve">
-                <span class="header__name">Resolve</span>
+                <img class="header__logo" src="assets/proprietary/helpme_logomark.svg" alt="Logomarca da helpme">
+                <span class="header__name">help<span class="header__name-me">me</span></span>
             </div>
             <button class="header__menu-toggle" aria-label="Abrir menu" data-menu-toggle>
                 <img class="header__menu-icon" src="assets/third-party/material-design-icons/menu.svg" alt="Ícone de menu">
@@ -149,7 +149,7 @@
 
     <footer class="footer">
         <div class="container-max-width footer__container">
-            <p class="footer__copyright">© 2024 Resolve. Todos os direitos reservados.</p>
+            <p class="footer__copyright">© 2024 helpme. Todos os direitos reservados.</p>
         </div>
     </footer>
 
