--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 <span class="header__name">help<span class="header__name-me">me</span></span>
             </div>
             <button class="header__menu-toggle" aria-label="Abrir menu" data-menu-toggle>
-                <img class="header__menu-icon" src="assets/third-party/material-design-icons/menu.svg" alt="Ícone de menu">
+                <img class="header__menu-icon" src="assets/third-party/material-design-icons/menu_24dp_2C2C2C_FILL0_wght400_GRAD0_opsz24.svg" alt="Ícone de menu">
+                <img class="header__menu-icon header__menu-icon--hide" src="assets/third-party/material-design-icons/close_24dp_2C2C2C_FILL0_wght400_GRAD0_opsz24.svg" alt="Ícone de fechar menu">
             </button>
             <ul class="header__menu">
                 <li class="header__menu-item"><a href="#home" class="header__menu-link">Home</a></li>
